<resources>
    <string name="app_name">Fresh Grocie</string>

    <string name="title_onboarding_1">Let\'s Find Market Nearest You</string>
    <string name="description_onboarding_1">Find the nearest vegetable and fruit market from your location</string>

    <string name="title_onboarding_2">It\'s All Here</string>
    <string name="description_onboarding_2">You can find anything fresh fruit and vegetable what you want with FreshGroice</string>

    <string name="title_onboarding_3">Very Flexible Access</string>
    <string name="description_onboarding_3">By using FreshGrocie, you can get recommendations fresh fruit and vegetable and comes with freshness fruit and vegetable detection feature</string>

    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="tab1">Ongoing</string>
    <string name="tab2">Completed</string>
    <string name="tab3">Cancelled</string>
    <string name="start">start</string>
    <string name="skip">Skip</string>
    <string name="finish">finish</string>
    <string name="next">NEXT</string>
    <string name="back">SKIP</string>
    <string name="getting_started">Getting Started</string>


    <string name="locationNotFound">Location is not found. Try Again</string>
    <string name="useThisLocation">Use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_point">Start Point</string>


    <string-array name="Languages">
        <item>Indonesia</item>
        <item>English</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="selected_item">Selected item:</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>


    <string name="menuHome">Home</string>
    <string name="searchbar_hint">Masukkan Toko</string>
    <string name="menuDetection">Detect</string>
    <string name="menuStore">Store</string>
    <string name="menuChat">Chat</string>
    <string name="menuProfile">Profile</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="account">Account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="gretings">Hello, </string>
    <string name="textKeep">Keep Healthy</string>
    <string name="textCardView">Congratulations, you are connected, lets see Nearest location</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="full_name">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="store">Store</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,. Read more...</string>
    <string name="text_transaction">Transaction</string>
    <string name="text_on_going">On Going</string>
    <string name="text_compeleted">Completed</string>
    <string name="text_canceled">Canceled</string>
    <string name="your_web_client_id">1001</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="_5_0">5.0</string>


</resources>
