<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/langlay"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right"
        android:padding="10dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/langlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lang"></ImageView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:id="@+id/title"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login to your"
            android:textColor="@color/md_black_1000"
            android:textSize="42dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/md_fc_greenligth"
            android:textSize="42dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_email_in"
            android:layout_width="match_parent"
            android:paddingHorizontal="8dp"
            app:boxStrokeWidth="20dp"
            app:boxStrokeColor="@color/md_black_1000"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconContentDescription="name"
            android:layout_height="wrap_content"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@color/md_fc_graylight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_password_in"
            android:layout_width="match_parent"
            android:paddingHorizontal="8dp"
            app:boxStrokeWidth="20dp"
            app:boxStrokeColor="@color/md_black_1000"
            app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:startIconContentDescription="name"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/md_fc_graylight"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remember me" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_green"
            android:text="@string/sign_in_with_password"
            />
        <TextView
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_continue_with"
            android:padding="20dp"
            android:textColor="@color/md_fc_gray"
            android:textAlignment="center"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_fb"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_google"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/md_fc_gray"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>