<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegister">

    <LinearLayout
        android:id="@+id/langlay"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="right"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/langlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lang"></ImageView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:id="@+id/title"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/langlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create your"
            android:textColor="@color/md_black_1000"
            android:textSize="42dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/md_fc_greenligth"
            android:textSize="42dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_person_24"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="Name" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_email_24"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:ems="10"
            android:inputType="text"
            android:text="Email" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawableRight="@drawable/baseline_visibility_24"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="Password" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btb_signpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/btn_green"
            android:text="@string/sign_in_with_password"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or continue with"
            android:padding="20dp"
            android:textColor="@color/md_fc_gray"
            android:textAlignment="center"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_fb"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_google"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textColor="@color/md_fc_gray"/>
            <androidx.appcompat.widget.AppCompatButton
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>